Explicitly inherit summary features